# src/backend/GreatReports.Presentation/Requests/AddScheduledEmailReceiverRequest.cs
@@ -1,0 +1,5 @@
+namespace GreatReports.Presentation.Requests;
+
+public record AddScheduledEmailReceiverRequest(
+    Guid UserId,
+    Guid? ClientContactId);
